[package]
name = "warp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15.0"
futures = "0.3.30"
serde = "1.0.204"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
